# agents

./: .env.example  .gitignore  README.md  clientes_verificados.xlsx  environment.yml  langgraph.json  pyproject.toml  ~$clientes_verificados.xlsx
app/: agent.py  agente.py  agentev2.py  entrada.xlsx  error404.py  publishers.csv  publishers_verified.xlsx  salidas_con_urls.xlsx
